@@ -16,12 +16,12 @@
               <property>
                 <propertyName>image</propertyName>
                 <expandable>1</expandable>
-                <value>/commander/jobSteps/940270/images/custom540f6193145acb76c5a1.png</value>
+                <value>/commander/jobSteps/977713/images/custom47778e4f145bc2b9ba41.png</value>
               </property>
               <property>
                 <propertyName>link</propertyName>
                 <expandable>1</expandable>
-                <value>/commander/jobSteps/940270/Performance Report.html</value>
+                <value>/commander/jobSteps/977713/Performance Report.html</value>
               </property>
             </propertySheet>
           </property>
@@ -465,6 +465,56 @@
                     <propertyName>reportDate</propertyName>
                     <expandable>1</expandable>
                     <value>2014-04-29 02:00:31</value>
+                  </property>
+                  <property>
+                    <propertyName>reportType</propertyName>
+                    <expandable>1</expandable>
+                    <value>Performance Report</value>
+                  </property>
+                  <property>
+                    <propertyName>reportUrl</propertyName>
+                    <expandable>1</expandable>
+                    <value>Performance Report.html</value>
+                  </property>
+                </propertySheet>
+              </property>
+            </propertySheet>
+          </property>
+          <property>
+            <propertyName>118795</propertyName>
+            <propertySheet>
+              <property>
+                <propertyName>Performance Report_L2</propertyName>
+                <propertySheet>
+                  <property>
+                    <propertyName>jobStepId</propertyName>
+                    <expandable>1</expandable>
+                    <value>977713</value>
+                  </property>
+                  <property>
+                    <propertyName>reportType</propertyName>
+                    <expandable>1</expandable>
+                    <value>Performance Report</value>
+                  </property>
+                  <property>
+                    <propertyName>reportUrl</propertyName>
+                    <expandable>1</expandable>
+                    <value>Performance Report.html</value>
+                  </property>
+                </propertySheet>
+              </property>
+              <property>
+                <propertyName>Performance Report_L3</propertyName>
+                <propertySheet>
+                  <property>
+                    <propertyName>jobStepId</propertyName>
+                    <expandable>1</expandable>
+                    <value>977713</value>
+                  </property>
+                  <property>
+                    <propertyName>reportDate</propertyName>
+                    <expandable>1</expandable>
+                    <value>2014-05-02 02:01:41</value>
                   </property>
                   <property>
                     <propertyName>reportType</propertyName>
@@ -3471,13 +3521,13 @@
         <propertyName>pluginBuildNumber</propertyName>
         <description></description>
         <expandable>1</expandable>
-        <value>31</value>
+        <value>32</value>
       </property>
       <property>
         <propertyName>version</propertyName>
-        <description>Version of the EC-Admin project&#10;&#10;History:&#10;- version 1.7.0&#10;    + Added a step to fix self reference to the project in createPluginFromProject&#10;&#10;- version 1.6.2&#10;     +   Fixed with resource default  workspace not being used in dynamic steps in performanceMetrics&#10;     +   Fixed subprocedure call to myProject instead of a fixed call to EC-Admin in performanceMetrics&#10;     +  Fixed ec_visbility in createPluginFromProject&#10;&#10;- version 1.6.1&#10;     +  Fixed problem with ec_setup and procedure names with dot (".") in createPluginFromProject&#10;&#10;- version 1.6.0&#10;     + increased perlHeaderJson length to exactly 20 lines&#10;     + add a procedure subPM-deploymentSize to calculate Commander environment size&#10;&#10;- version1.5.2&#10;     + Rewrote localUsage to access jobStepsDirectly&#10;     + localUsage is also now a standalone procedure (subPM-localUsage)&#10;&#10;- version1.5.1&#10;     + First user submitted patch by Kate McCormack: &#10;                   Adding setTimeout equal to 600 so the ec commands won't time out in saveAllObjects and saveProjects&#10;&#10;-version 1.5.0&#10;     + added synchronizePlugins procedure to copy plugins from the server to an agent&#10;     + fixed Email address URL in createPluginFromProject&#10;&#10;- version 1.4.5&#10;     + Use zip when jar is not available to package plugin&#10;- version 1.4.4&#10;     + Fixed Windows path issue for createPluginFromProject&#10;     + Fixed jar error not reported&#10;- version 1.4.3&#10;     + Ignored sub-steps for localUsage&#10;     + Added comparison for /server/hostIP and /server/hostName&#10;- version 1.4.2&#10;     + Updated help page&#10;- version 1.4.1&#10;     + Fixed percentage formatting&#10;- version 1.4.0&#10;     + Add localUsage statistics in performanceMetrics&#10;     + Remove project ec_tags and other meaningless properties&#10;&#10;- version 1.3.9&#10;     + Added a time limit for performanceMetric&#10;&#10;- version 1.3.8&#10;     + Fixed ec_visbility  bugs in createPluginFromProject&#10;     + Fixed descriptionForPlugin  bug in createPluginFromProject&#10;     + Fixed several procedure descriptions for the plugin&#10;     + Added help about project level properties for createPluginFromProject&#10;     +  Fixed problem with ec_setup and procedure names with dot (".") in createPluginFromProject&#10;&#10;- version 1.3.7&#10;    + removed jobId references in preparation of EC 5.0&#10;    + added artifactsCleanup_byQuantity t clean AV but keep at least X.&#10;&#10;- version 1.3.6&#10;    +  saveProject:&#10;        o Add chmod after directory creation for cases when server service and server agent service users are different.&#10;    + Added saveAllObjects procedure to export a bunch of objects individually for finer granularity in the backup&#10;    + Completed the plugin help&#10;    + Added license usage information in performanceMetrics&#10;    + Added a sort to deleteObjects to prevent job range overlapping.&#10;&#10;- version 1.3.5&#10;    + Added automatic performance charting&#10;    + Bug fixes&#10;    + Also available as a plugin.&#10;    +  jobsCleanup and jobCleanup_byResult:&#10;         o Add a parameter to skip the computation of the disk space used; to speed up the job&#10;    + Semaphore&#10;         o Added a local job counter to decrement the global gate value. Useful when aborting a job.&#10;           Simply a step that "always run" that will decrement your global gate by /myJob/localSemaphoreCounter&#10;    + createPluginFromProject &#10;         o Added to automatically create a plugin from a project&#10;&#10;- version 1.3.4&#10;    + Better resource management for artifactsCleanup and cleanupRepository&#10;    + perforrmanceMetrics:&#10;          o  Fix bug on Free available RAM with European numbers&#10;          o  Add error management on fsutil call (Windows)&#10;          o  Add a cleanup step for temporary file used in Disk Performance&#10;    + Refactor jobCleanup_byResult to include Workflow and schedule jobs&#10;       Add time parameter&#10;    + Add compareVersion in the PerlLib to compare number strings like x.y.z....&#10;&#10;- version 1.3.3&#10;    + Added getPS() function in perlLib (JSON and XML format)&#10;    + Added ec_parameterForm to artifactsCleanup to give it the same look and feel than jobCleanup&#10;    + Took advantage of createJobStep to simplify  artifactsCleanup&#10;&#10;- version 1.3.2&#10;    + Added "available disk space" information in performanceMetrics procedure&#10;    + Fixed bug with getP()&#10;    + Added Perl header and library for JSON format&#10;    + Added new parameters for saveProjects (relocatable, ACLs and notifiers)&#10;&#10;- version 1.3.1:&#10;    + Added "available memory" information in performanceMetrics procedure&#10;&#10;- version 1.3:&#10;    + New procedure to delete jobs by results&#10;    + New parameter to cleanupJobs to skip jobs matching a pattern&#10;&#10;- version 1.2:  &#10;    + New  performance diagnostic procedure&#10;    + provide a getP Perl function for easy getProperty&#10;    + New procedure to delete workspace orphan job directories&#10;&#10;- version 1.1: &#10;      semaphore management&#10;      saveProjects&#10;&#10;- version 1.0: &#10;      initial version including job and artifact management</description>
+        <description>Version of the EC-Admin project&#10;&#10;History:&#10;- version 1.7.1&#10;    + Fixed location of the saved filter for RunReport_Performance_Schedule schedule&#10;&#10;- version 1.7.0&#10;    + Added a step to fix self reference to the project in createPluginFromProject&#10;&#10;- version 1.6.2&#10;     +   Fixed with resource default  workspace not being used in dynamic steps in performanceMetrics&#10;     +   Fixed subprocedure call to myProject instead of a fixed call to EC-Admin in performanceMetrics&#10;     +  Fixed ec_visbility in createPluginFromProject&#10;&#10;- version 1.6.1&#10;     +  Fixed problem with ec_setup and procedure names with dot (".") in createPluginFromProject&#10;&#10;- version 1.6.0&#10;     + increased perlHeaderJson length to exactly 20 lines&#10;     + add a procedure subPM-deploymentSize to calculate Commander environment size&#10;&#10;- version1.5.2&#10;     + Rewrote localUsage to access jobStepsDirectly&#10;     + localUsage is also now a standalone procedure (subPM-localUsage)&#10;&#10;- version1.5.1&#10;     + First user submitted patch by Kate McCormack: &#10;                   Adding setTimeout equal to 600 so the ec commands won't time out in saveAllObjects and saveProjects&#10;&#10;-version 1.5.0&#10;     + added synchronizePlugins procedure to copy plugins from the server to an agent&#10;     + fixed Email address URL in createPluginFromProject&#10;&#10;- version 1.4.5&#10;     + Use zip when jar is not available to package plugin&#10;- version 1.4.4&#10;     + Fixed Windows path issue for createPluginFromProject&#10;     + Fixed jar error not reported&#10;- version 1.4.3&#10;     + Ignored sub-steps for localUsage&#10;     + Added comparison for /server/hostIP and /server/hostName&#10;- version 1.4.2&#10;     + Updated help page&#10;- version 1.4.1&#10;     + Fixed percentage formatting&#10;- version 1.4.0&#10;     + Add localUsage statistics in performanceMetrics&#10;     + Remove project ec_tags and other meaningless properties&#10;&#10;- version 1.3.9&#10;     + Added a time limit for performanceMetric&#10;&#10;- version 1.3.8&#10;     + Fixed ec_visbility  bugs in createPluginFromProject&#10;     + Fixed descriptionForPlugin  bug in createPluginFromProject&#10;     + Fixed several procedure descriptions for the plugin&#10;     + Added help about project level properties for createPluginFromProject&#10;     +  Fixed problem with ec_setup and procedure names with dot (".") in createPluginFromProject&#10;&#10;- version 1.3.7&#10;    + removed jobId references in preparation of EC 5.0&#10;    + added artifactsCleanup_byQuantity t clean AV but keep at least X.&#10;&#10;- version 1.3.6&#10;    +  saveProject:&#10;        o Add chmod after directory creation for cases when server service and server agent service users are different.&#10;    + Added saveAllObjects procedure to export a bunch of objects individually for finer granularity in the backup&#10;    + Completed the plugin help&#10;    + Added license usage information in performanceMetrics&#10;    + Added a sort to deleteObjects to prevent job range overlapping.&#10;&#10;- version 1.3.5&#10;    + Added automatic performance charting&#10;    + Bug fixes&#10;    + Also available as a plugin.&#10;    +  jobsCleanup and jobCleanup_byResult:&#10;         o Add a parameter to skip the computation of the disk space used; to speed up the job&#10;    + Semaphore&#10;         o Added a local job counter to decrement the global gate value. Useful when aborting a job.&#10;           Simply a step that "always run" that will decrement your global gate by /myJob/localSemaphoreCounter&#10;    + createPluginFromProject &#10;         o Added to automatically create a plugin from a project&#10;&#10;- version 1.3.4&#10;    + Better resource management for artifactsCleanup and cleanupRepository&#10;    + perforrmanceMetrics:&#10;          o  Fix bug on Free available RAM with European numbers&#10;          o  Add error management on fsutil call (Windows)&#10;          o  Add a cleanup step for temporary file used in Disk Performance&#10;    + Refactor jobCleanup_byResult to include Workflow and schedule jobs&#10;       Add time parameter&#10;    + Add compareVersion in the PerlLib to compare number strings like x.y.z....&#10;&#10;- version 1.3.3&#10;    + Added getPS() function in perlLib (JSON and XML format)&#10;    + Added ec_parameterForm to artifactsCleanup to give it the same look and feel than jobCleanup&#10;    + Took advantage of createJobStep to simplify  artifactsCleanup&#10;&#10;- version 1.3.2&#10;    + Added "available disk space" information in performanceMetrics procedure&#10;    + Fixed bug with getP()&#10;    + Added Perl header and library for JSON format&#10;    + Added new parameters for saveProjects (relocatable, ACLs and notifiers)&#10;&#10;- version 1.3.1:&#10;    + Added "available memory" information in performanceMetrics procedure&#10;&#10;- version 1.3:&#10;    + New procedure to delete jobs by results&#10;    + New parameter to cleanupJobs to skip jobs matching a pattern&#10;&#10;- version 1.2:  &#10;    + New  performance diagnostic procedure&#10;    + provide a getP Perl function for easy getProperty&#10;    + New procedure to delete workspace orphan job directories&#10;&#10;- version 1.1: &#10;      semaphore management&#10;      saveProjects&#10;&#10;- version 1.0: &#10;      initial version including job and artifact management</description>
         <expandable>1</expandable>
-        <value>1.7.0</value>
+        <value>1.7.1</value>
       </property>
     </propertySheet>
     <credential>
@@ -9004,11 +9054,6 @@
           <value>1</value>
         </property>
         <property>
-          <propertyName>Locales</propertyName>
-          <expandable>1</expandable>
-          <value></value>
-        </property>
-        <property>
           <propertyName>Object Type</propertyName>
           <expandable>1</expandable>
           <value>job</value>
@@ -9026,7 +9071,7 @@
         <property>
           <propertyName>Saved Filter</propertyName>
           <expandable>1</expandable>
-          <value>/projects/EC-Admin/ec_savedSearches/last500PerformanceMetricsJobs</value>
+          <value>/plugins/EC-Admin/project/ec_savedSearches/last500PerformanceMetricsJobs</value>
         </property>
         <property>
           <propertyName>Series 1 Chart Type</propertyName>
@@ -9042,11 +9087,6 @@
           <propertyName>Series 1 Property</propertyName>
           <expandable>1</expandable>
           <value>readDiskPerf</value>
-        </property>
-        <property>
-          <propertyName>Series 1 Property Expression</propertyName>
-          <expandable>1</expandable>
-          <value></value>
         </property>
         <property>
           <propertyName>Series 1 Property Function</propertyName>
@@ -9074,11 +9114,6 @@
           <value>writeDiskPerf</value>
         </property>
         <property>
-          <propertyName>Series 2 Property Expression</propertyName>
-          <expandable>1</expandable>
-          <value></value>
-        </property>
-        <property>
           <propertyName>Series 2 Property Function</propertyName>
           <expandable>1</expandable>
           <value>Min</value>
@@ -9102,11 +9137,6 @@
           <propertyName>Series 3 Property</propertyName>
           <expandable>1</expandable>
           <value>DBPerf</value>
-        </property>
-        <property>
-          <propertyName>Series 3 Property Expression</propertyName>
-          <expandable>1</expandable>
-          <value></value>
         </property>
         <property>
           <propertyName>Series 3 Property Function</propertyName>
